# epar_drive

./: .gitignore  local.yml
aspnetserver/: Dockerfile  (+3 more)
backend/: manage.py  pyproject.toml
backend/.envs/.local/: .django  .postgres
backend/apps/base/: admin.py  apps.py  constants.py  models.py  utils.py  validators.py
backend/apps/base/api/: api_router.py  serializers.py  views.py
backend/apps/base/migrations/: 0001_initial.py  0002_file_prefix.py  0003_file_size.py  0004_file_creator.py  0005_file_in_basket.py  0006_file_head_folder.py  0007_remove_file_head_folder.py  0008_file_file_version.py  0009_file_updated_date.py  0010_usersharedpermission_file_allow_users_and_more.py  0011_rename_folder_usersharedpermission_folder_to.py  0012_rename_file_usersharedpermission_file_to_and_more.py  0013_alter_usersharedpermission_unique_together.py  0014_usersharedpermission_parent_permission.py
backend/apps/file/: apps.py  utils.py
backend/apps/file/api/: api_router.py  serializers.py  views.py
backend/apps/folder/: admin.py  apps.py  models.py
backend/apps/folder/api/: api_router.py  serializers.py  views.py
backend/apps/folder/migrations/: 0001_initial.py  0002_folder_parent_folder.py  0003_folder_in_basket.py  0004_folder_head_folder.py  0005_folder_files.py  0006_alter_folder_parent_folder.py  0007_folder_updated_date.py  0008_folder_allow_users.py  0009_alter_folder_allow_users.py  (+2 more)
backend/apps/users/: admin.py  models.py  utils.py
backend/config/: api_router.py  asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py
(+54 files in other folders)
